# vaultbin

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  build.rs  go.mod  go.sum  main.go
.github/workflows/: clippy.yml  release.yml
frontend/: README.md  package-lock.json  package.json  size-plugin.json
frontend/src/: index.js  manifest.json  template.html
frontend/src/components/: App.js  PasteEditor.css  PasteEditor.js  PasteLineMarker.js  PasteLineMarker.scss  PasteMenu.js  PasteMenu.scss  PasteRoute.css  PasteRoute.js  PasteStats.js  PasteStats.scss  PasteViewer.js  PasteViewer.scss
frontend/src/style/: index.css
internal/apierror/: codes.go  error.go  middleware.go
internal/app/: app.go  error.go
internal/common/: encryption.go  util.go
internal/config/: config.go  default.config.toml
internal/db/: db.go  store_pastes.go
internal/handler/pastes/: api.go  api_create.go  api_duplicate.go  api_new.go  api_raw.go  handler.go  internal.go  pages.go  paste_new.go  paste_raw.go  paste_view.go
internal/public/static/: embed.go  highlight.min.js  paste.css  paste.js
internal/public/views/: embed.go  paste.go  paste.html
internal/store/: pastes.go
internal/wire/: base.go  pastes.go
src/: config.rs  main.rs  wire.rs
src/database/: encryption.rs  error.rs  mod.rs  models.rs
src/routes/: api_paste_create.rs  api_paste_get.rs  api_paste_get_raw.rs  api_stats.rs  mod.rs  serve_frontend.rs
