[package]
name = "vaultbin"
license = "MIT"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-cors = { version = "0.6.1", optional = true }
config = "0.11.0"
serde = { version = "1.0.136", features = ["derive"] }
mime = "0.3.16"
env_logger = "0.9.0"
log = "0.4.16"
sled = "0.34.7"
rmp-serde = "1.0.0"
aes-gcm = "0.9.4"
lazy_static = "1.4.0"
getrandom = "0.2.5"
base64 = "0.13.0"
sha2 = "0.10.2"
thiserror = "1.0.30"
rust-embed = { version = "6.3.0", features = ["interpolate-folder-path"] }
actix-governor = "0.3.0"
# lol_html = "0.3.1"
# html-escape = "0.2.11"
# unicode-truncate = "0.2.0"

[features]
cors = ["actix-cors"]
